@@ -3,6 +3,7 @@
     o subjectProfileTextPlot: paramGroupVar, paramValueVar can be a function
     o subjectProfile[Interval|Event]Plot: colorPalette and getPatientColorPalette
     o subjectProfileEventPlot: shapePalette and getPatientShapePalette
+    o add label attributes reported in case plot is empty
 0.0.2
     o remove glpgUtility from the dependencies
 0.0.1
